--- a/demos/form-validator/index.html
+++ b/demos/form-validator/index.html
@@ -71,8 +71,10 @@
               <label class="control-label"><input type="radio" name="gender" value="female" /> Female</label>
             </div>
         </div>
-        <div class="checkbox">
-          <label for="confirm" class="control-label"><input type="checkbox" name="confirm" id="confirm" value="true"/>Check this box</label>
+        <div class="form-group">
+            <div class="checkbox">
+              <label for="confirm" class="control-label"><input type="checkbox" name="confirm" id="confirm" value="true"/>Check this box</label>
+            </div>
         </div>
         <input type="submit" class="btn btn-primary">
     </form>
